# trading-vault-smart-contract-Solana

./: .gitignore  .pnp.cjs  Anchor.toml  package-lock.json  package.json  tsconfig.json
programs/trading_vault/: Cargo.toml
programs/trading_vault/src/: error.rs  lib.rs
programs/trading_vault/src/instructions/: close_position.rs  deposit.rs  init_deposit.rs  initialize_vault.rs  mod.rs  pause_trading.rs  raydium_swap_base_in.rs  start_trading.rs  terminate_vault.rs  withdraw.rs
programs/trading_vault/src/state/: user.rs  vault.rs
tests/: trading_vault.ts
tests/key/: buffer.json  tokenmint.json
tests/script/: setup.ts  vaultClosePosition.ts  vaultDeposit.ts  vaultInitDeposit.ts  vaultInitialize.ts  vaultSwapBaseIn.ts  vaultWithdraw.ts
tests/utils/: index.ts
